# olfactory-regenerative-age

./: .gitignore  Makefile  README.md  environment.yml  olfactory_regenerative_age_prd.md  pyproject.toml
configs/: command_manifest.yaml  cross_tissue_age_effects.yaml  external_datasets.yaml  features.yaml  gateway.yaml  gene_sets.yaml  models.yaml  niche_ligand_receptor_pairs.yaml  perturbation_validation_candidates.yaml  regeneration_gene_sets.yaml  regulatory_driver_gene_sets.yaml  scvi_full_4m_genes_1500.txt  spatial_validation_markers.yaml
docs/: active_work_tracker.md  author_submission_fields.md  changelog.md  claim_ledger.md  compositional_modeling_plan.md  cover_letter_draft.md  cross_tissue_age_effects.md  cross_tissue_specificity_plan.md  current_tasks.md  data_code_availability.md  deseq2_parity_decision.md  external_label_request_log.md  external_validation_final_search.md  external_validation_refresh.md  external_validation_sources.md  figure_plan.md  foundation_model_benchmark_plan.md  full_4m_compute_plan.md  gse184117_label_request.md  gse309325_organoid_adapter_status.md  journal_acceptance_tracker.md  large_artifact_manifest.md  latent_recompute_workflow.md  latent_space_recovery_plan.md  limitations.md  manuscript_framework.md  manuscript_methods_draft.md  manuscript_package_check.md  manuscript_rerun_profile.md  manuscript_story.md  methodology_standards.md  milo_full_4m_results.md  milo_implementation_parity.md  niche_signaling_feasibility.md  perturbation_validation_plan.md  project_status_and_remaining_work.md  publication_tables.md  (+12 more)
(+224 files in other folders)
