[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "olfactory-regenerative-age"
version = "0.1.0"
description = "Donor-level ORA analysis scaffold for the Gateway human olfactory epithelium atlas."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "ORA contributors" }
]
dependencies = [
  "anndata>=0.10",
  "h5py>=3.10",
  "numpy>=1.26",
  "pandas>=2.1",
  "PyYAML>=6.0",
  "scipy>=1.11",
  "scikit-learn>=1.4",
  "statsmodels>=0.14",
  "joblib>=1.3",
  "matplotlib>=3.8"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5"
]
full = [
  "scanpy>=1.10",
  "xgboost>=2.0",
  "lightgbm>=4.0",
  "catboost>=1.2",
  "shap>=0.45",
  "cellxgene-census>=1.15",
  "gseapy>=1.1",
  "decoupler>=1.8",
  "snakemake>=8.0"
]
latent = [
  "scanpy>=1.10",
  "scvi-tools>=1.2",
  "torch>=2.2",
  "dask[array]>=2024.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "scripts", "tests"]
